Toyaj | 1. Cell design  2.HomeScreen design  3. Detail Screen design 4. API Implemented  4. Launch Screen design.

--- a/NewsApp/Info.plist
+++ b/NewsApp/Info.plist
@@ -60,5 +60,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NYTimesAppKey</key>
+	<string>Ez9P0kJ71gKYABWFGWPAI383Q4dZl43I</string>
 </dict>
 </plist>
